--- a/templates/author/add.html.twig
+++ b/templates/author/add.html.twig
@@ -2,9 +2,15 @@
 
 {{form_start(formulaire)}} {#<form>#}
 
-{{form_label(formulaire.username)}} {#<label>#}
+{{form_label(formulaire.email,'Votre nom')}} {#<label>#}
 {{form_widget(formulaire.email)}} {#<input type>#}
+{{form_errors(formulaire.email)}} 
 
-{{form_error(formulaire.username)}} 
+{{form_label(formulaire.username)}} {#<label>#}
+{{form_widget(formulaire.username)}} {#<input type>#}
+{{form_errors(formulaire.username)}}
+
+
+
 
 {{form_end(formulaire)}} {#</form>#}
