--- a/templates/author/add.html.twig
+++ b/templates/author/add.html.twig
@@ -1,5 +1,5 @@
 {#{{form(formulaire)}}#}
-
+<h1>Add</h1>
 {{form_start(formulaire)}} {#<form>#}
 
 {{form_label(formulaire.email,'Votre nom')}} {#<label>#}
