Add et update modifier

--- a/templates/author/ShowAll.html.twig
+++ b/templates/author/ShowAll.html.twig
@@ -12,7 +12,7 @@
  <td>
  <a href="{{path('deleteAuthor',{'id':i.id})}}">Delete</a> {#or URL #}
  <a href="{{path('showDetails',{'id':i.id})}}">Show</a>
- <a href="">Update</a>
+ <a href="{{path('updateAuthor',{'id':i.id})}}">Update</a>
 </td>
 </tr>
 {% endfor %}
